Fix Integration builder dark mode

--- a/src/pages/quick-start/styles.module.css
+++ b/src/pages/quick-start/styles.module.css
@@ -199,3 +199,40 @@ input:checked + .slider:before {
     width: 60%;
   }
 }
+
+html[data-theme="dark"] .stepContainer.stepSelected {
+  background-color: rgb(72, 77, 91);
+  border-color: var(--ifm-color-primary);
+}
+
+html[data-theme="dark"] .w3DropdownMenu li:hover {
+  background-color: rgb(77, 77, 77);
+}
+
+html[data-theme="dark"] .slider {
+  background-color: rgb(77, 77, 77);
+}
+
+html[data-theme="dark"] .slider:before {
+  background-color: white;
+}
+
+html[data-theme="dark"] .stepContainer {
+  box-shadow: inset 0 1px rgb(77, 77, 77);
+}
+
+html[data-theme="dark"] .stepContainer:hover {
+  border-color: rgb(77, 77, 77);
+}
+
+html[data-theme="dark"] .copyContainer .copyButton {
+  color: #ccc;
+}
+
+html[data-theme="dark"] .copyContainer .copyButton.copied {
+  color: #ccc;
+}
+
+html[data-theme="dark"] .optionContainer > span {
+  color: #ccc;
+}
